--- a/project2/package.json
+++ b/project2/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.4"
+    "mongoose": "^6.1.4",
+    "react-uuid": "^1.0.2"
   },
   "devDependencies": {
     "concurrently": "^6.5.1",
